Upgrade for 1.18